# cpm_shoot

./: .gitignore  README.md  detect_blue.py  dist.py  exp.py  main.py  pwm.py  pyproject.toml  servo.py  tresh_config.py
scheme/scheme/: #auto_saved_files#  _autosave-scheme.kicad_sch
scheme/scheme/scheme/: scheme.csv  scheme.kicad_prl  scheme.kicad_pro  scheme.kicad_sch  scheme.xml
second_party/: detect_blue.py  dist.py  exp.py  opio.py  tresh_config.py
